--- a/finanzas/app/templates/base.html
+++ b/finanzas/app/templates/base.html
@@ -1,3 +1,6 @@
+{% now "Y" as current_year %}
+{% now "m" as current_month %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -81,7 +84,7 @@
                 <a class="nav-link" href="{% url 'registrar_ingreso' %}">Ingresos</a>
               </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'reporte_financiero' %}">Reporte Financiero</a>
+                <a class="nav-link" href="{% url 'reporte_financiero' anio=current_year mes=current_month %}">Reporte Financiero</a>
             </li>
             <!--<li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
