--- a/finanzas/app/templates/reporte_financiero.html
+++ b/finanzas/app/templates/reporte_financiero.html
@@ -14,8 +14,8 @@
             <div class="d-flex align-items-center">   
                 <h6>Seleccione que informe desea ver:</h6>
                 <div class="btn-group selector" role="group" aria-label="GastosIngresos">
-                    <button type="button" class="btn btn-outline-primary">Gastos</button>
-                    <button type="button" class="btn btn-outline-primary">Ingresos</button>
+                    <button type="button" class="btn btn-outline-primary" id="btn-gastos">Gastos</button>
+                    <button type="button" class="btn btn-outline-primary" id="btn-ingresos">Ingresos</button>
                 </div>
             </div>
         </div>
@@ -60,8 +60,8 @@
                 <p>Selecciona una categoria para ver sus detalles.</p>
             </div>
             
-            <div class="alert alert-warning" role="alert" id="mensaje-ingresos">
-                No hay ingresos registrados para este mes.
+            <div class="alert alert-warning" role="alert" id="mensaje-resultados">
+                No hay datos registrados para este mes.
             </div>
         </div>
 
@@ -105,11 +105,35 @@
 
 <script>
 
-    // Captura de los botones de ciclo
-    const btnMensual = document.getElementById('btn-mensual');
-    const btnAnual = document.getElementById('btn-anual');
+        // Captura de los botones de ciclo
+        const btnMensual = document.getElementById('btn-mensual');
+        const btnAnual = document.getElementById('btn-anual');
 
+        // Captura los botones de Gastos e Ingresos
+        const btnGastos = document.getElementById('btn-gastos');
+        const btnIngresos = document.getElementById('btn-ingresos');
+        
+        // Obtén la URL actual
+        const url = window.location.href;
 
+        // Verifica si la URL contiene 'gastos' o 'ingresos'
+        if (url.includes('gastos')) {
+            btnGastos.classList.add('active');
+            btnIngresos.classList.remove('active');
+        } else if (url.includes('ingresos')) {
+            btnIngresos.classList.add('active');
+            btnGastos.classList.remove('active');
+        }
+
+        function obtenerTipoActivo() {
+
+            if (btnGastos.classList.contains('active')) {
+                return 'gastos';
+            } else if (btnIngresos.classList.contains('active')) {
+                return 'ingresos';
+            }
+            return null;  // Por si ninguno está activo
+        }
 
     var contexto = JSON.parse('{{ context|escapejs }}');
     var ingresos = contexto.ingresos;
@@ -233,12 +257,14 @@ botonesMeses.forEach(boton => {
         event.preventDefault();
         const mesSeleccionado = this.textContent.trim();  // Captura el texto del mes
         const mesNumerico = meses[mesSeleccionado];  // Obtén el valor numérico del mes
+        const tipo = obtenerTipoActivo();  // Obtiene si es 'gastos' o 'ingresos'
 
         if (mesNumerico) {
             // Obtiene el año actual
             const anioActual = new Date().getFullYear();
+
             // Redirige a la URL 
-            const url = `/ver/reporteFinanciero/${anioActual}/${mesNumerico}/`;
+            const url = `/ver/reporteFinanciero/${tipo}/${anioActual}/${mesNumerico}/`;
             window.location.href = url;  // Redirige a la nueva URL
         }
     });
@@ -246,17 +272,17 @@ botonesMeses.forEach(boton => {
 
 // Comprobar si hay ingresos
 var contexto = JSON.parse('{{ context|escapejs }}');
-var hayIngresos = contexto.hay_ingresos;
+var hayResultados = contexto.hay_resultados;
 
 // Lógica para mostrar/ocultar elementos
-if (hayIngresos) {
+if (hayResultados) {
     document.getElementById('google-chart-container').style.display = 'block';
     document.getElementById('detalle_categoria').style.display = 'block'; // Mostrar detalle si hay ingresos
-    document.getElementById('mensaje-ingresos').style.display = 'none';  // Ocultar mensaje si hay ingresos
+    document.getElementById('mensaje-resultados').style.display = 'none';  // Ocultar mensaje si hay ingresos
 } else {
     document.getElementById('google-chart-container').style.display = 'none';  // Ocultar gráfico si no hay ingresos
     document.getElementById('detalle_categoria').style.display = 'none'; // Ocultar detalle si no hay ingresos
-    document.getElementById('mensaje-ingresos').style.display = 'block';  // Mostrar mensaje
+    document.getElementById('mensaje-resultados').style.display = 'block';  // Mostrar mensaje
 }
 
 
@@ -306,8 +332,52 @@ btnMensual.addEventListener('click', function() {
 // Evento para boton Anual
 btnAnual.addEventListener('click', function() {
     const anioActual = new Date().getFullYear();
-    const url = `/ver/reporteFinanciero/${anioActual}/0/`;
+    const tipo = obtenerTipoActivo();  // Obtiene si es 'gastos' o 'ingresos'
+    const url = `/ver/reporteFinanciero/${tipo}/${anioActual}/0/`;
             window.location.href = url;  // Redirige a la nueva URL
+});
+
+
+// Evento para botón Gastos
+btnGastos.addEventListener('click', function() {
+    btnIngresos.classList.remove('active');
+    btnGastos.classList.add('active'); // Asegúrate de activar el botón de Gastos
+
+    const anioActual = new Date().getFullYear();
+
+    // Obtiene el mes desde la URL
+    const urlParts = window.location.pathname.split('/');
+    const mesSeleccionado = parseInt(urlParts[urlParts.length - 2]);
+    console.log("mes elegido", mesSeleccionado);
+
+    let url;
+    if (isNaN(mesSeleccionado)) {
+        console.log("es anual");
+        url = `/ver/reporteFinanciero/gastos/${anioActual}/0/`;
+    } else { 
+        console.log("es mensual");
+        url = `/ver/reporteFinanciero/gastos/${anioActual}/${mesSeleccionado}/`;
+    }
+    window.location.href = url;  // Redirige a la nueva URL
+});
+
+// Evento para botón Ingresos
+btnIngresos.addEventListener('click', function() {
+    btnGastos.classList.remove('active');
+    btnIngresos.classList.add('active');
+
+    const anioActual = new Date().getFullYear();
+    const urlParts = window.location.pathname.split('/');
+    const mesSeleccionado = parseInt(urlParts[urlParts.length - 2]);
+
+    let url;
+
+    if (isNaN(mesSeleccionado)) {
+        url = `/ver/reporteFinanciero/ingresos/${anioActual}/0/`;
+    } else {
+        url = `/ver/reporteFinanciero/ingresos/${anioActual}/${mesSeleccionado}/`;
+    }
+    window.location.href = url;  // Redirige a la nueva URL
 });
 </script>
 
