--- a/finanzas/app/templates/reporte_financiero.html
+++ b/finanzas/app/templates/reporte_financiero.html
@@ -50,8 +50,8 @@
         
         <div class="col-12 d-flex mt-4">
             <!-- Gráfico de Google Charts -->
-            <div id="google-chart-container" class="flex-fill" style="flex: 1;">
-                <div id="google-piechart" style="width: 100%; height: 600px;"></div>
+            <div id="google-chart-container">
+                <div id="google-piechart" style="width: 600px; height: 600px;"></div>
             </div>
         
             <!-- Detalle Categoria -->
